# Chatbot

./: CMakeLists.txt
inc/: Common.hpp  Error.hpp
inc/Models/: EthernetNode.hpp  ServerSocket.hpp  Socket.hpp
src/: main.cpp
src/Models/: EthernetNode.cpp  ServerSocket.cpp  Socket.cpp
test/: test.cpp
tools/: test_client.py
